force-app/main/default/objects/Opportunity/fields/QB_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>The QuickBooks record Id.</inlineHelpText>
    <label>QB Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>