force-app/main/default/objects/Opportunity/fields/QB_Sync_Token__c.field-meta.xml
<CustomField>
    <fullName>QB_Sync_Token__c</fullName>
    <inlineHelpText>The QuickBooks Sync Token. This needs to stay in sync with QuickBooks in order to push information to QuickBooks.</inlineHelpText>
    <label>Sync Token</label>
    <length>10</length>
    <type>Text</type>
</CustomField>